# maya_hot_reload_example_public

./: .gitignore  404.html  CMakeLists.txt  build.bat  index.html  mkdocs.yml  readme.md  sitemap.xml
conclusion/: index.html
credits/: index.html
demo/: index.html
docs/: conclusion.md  credits.md  demo.md  getting_into_it.md  getting_somewhere.md  getting_started.md  index.md
getting_into_it/: index.html
getting_somewhere/: index.html
getting_started/: index.html
modules/: FindMaya.cmake
scripts/: deleteTmpLogicLib.cmake  renameLogicLib.cmake
search/: search_index.json
src/: deformer.cpp  deformer.h  deformer_platform.cpp  deformer_platform.h  logic.cpp  logic.h  plugin_main.cpp  plugin_main.h
